Fixes size of screen on iphone

--- a/src/footer.css
+++ b/src/footer.css
@@ -4,7 +4,6 @@
   left: 0;
   right: 0;
   display: flex;
-  justify-content: center;
   background: #cec8fd;
   border-top: 2px solid #8c7efa;
   overflow-x: scroll;
@@ -27,4 +26,10 @@
 
 .footer img:hover {
   box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.75);
+}
+
+@media screen and (min-width: 1050px) {
+  .footer {
+    justify-content: center;
+  }
 }
