--- a/src/pages/player.css
+++ b/src/pages/player.css
@@ -1,7 +1,3 @@
-.player .content {
-  height: calc(100vh - 126px);
-}
-
 .player .content img.profile-picture {
   margin-top: 5vh;
   margin-left: 5vw;
